fixed alignment

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,10 @@
 .mybutton:hover {
   color: white;
 }
-
+#categoryList{
+  text-align:center;
+  margin: auto;
+}
 .mybutton span {
   position: absolute;
   display: block;
